java-package (0.55) UNRELEASED; urgency=medium

  [ tony mancill ]
  * Team upload.
  * Add lsb-release to Depends (used in make-jpkg).
  * Apply patch to honor --revision argument.
    Thanks to Alberto Caso Palomino. (Closes: #743919)

  [ Emmanuel Bourg ]
  * Bumped the Standards-Version of the generated package to 3.9.5

 -- tony mancill <tmancill@debian.org>  Mon, 07 Apr 2014 21:26:36 -0700

java-package (0.54) unstable; urgency=medium

  * Team upload.
  * Added support for ARM VFP/hard-float JDK releases.
    Thanks to Christopher Huhn <C.Huhn@gsi.de> (Closes: #724455)
  * Added more command line tool alternatives: jcmd, jdeps, jhat, jrunscript,
    schemagen, wsgen, wsimport and xjc
  * Standards-Version updated to 3.9.5 (no changes)
  * Removed the suggested dependency on openjdk-6-jre
  * Switch to debhelper level 9

 -- Emmanuel Bourg <ebourg@apache.org>  Mon, 24 Mar 2014 18:44:58 +0100

java-package (0.53) unstable; urgency=low

  * Team upload.
  * Added support for early access releases (Closes: #721136)
  * Added support for GA and FCS releases
  * Excluded the fxavcodecplugin libraries used by JavaFX from the dependency
    calculation performed by dh_shlibdeps to avoid errors (Closes: #687075)
  * Updated the package description and debian/README.Debian:
    - no longer recommend openjdk-6
    - mention the compatibility with Java 8
  * Removed 'Replaces: ${j2se_package}debian' from the generated control file
  * Adjusted the disk space required to unpack the Java 8 documentation
  * Updated the manpages for Java 8
  * Updated debhelper level to 7
  * debian/rules: Use dh_prep instead of dh_clean -k
  * Removed the recommended dependency on libstdc++5 from the generated
    control file (used by the now unsupported IBM JDK 5)
  * Removed the recommended dependency on libgtk1.2 from the generated
    control file (removed from Squeeze)
  * Removed the recommended dependency on libx11-6 and libasound2 from